--- a/templates/base.html
+++ b/templates/base.html
@@ -30,8 +30,11 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/game/image_puzzle">Image Puzzle</a>
                         <a class="dropdown-item" href="/game/image_quiz">Image Quiz</a>
-                        <a class="dropdown-item" href="/game/memory_match">Memory Match</a>
                         <a class="dropdown-item" href="/game/image_trivia">Image Trivia</a>
+                        <a class="dropdown-item" href="/game/memory_match">Memory Match</a>
+                        <a class="dropdown-item" href="/game/crossword">Crossword</a>
+                        <a class="dropdown-item" href="/game/hashtag">Hashtag</a>
+                        <a class="dropdown-item" href="/game/creative_page">Creative Page</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/upload">Upload Images</a>
                         <a class="dropdown-item" href="/delete">Delete Games</a>
