--- a/templates/games/image_puzzle.html
+++ b/templates/games/image_puzzle.html
@@ -55,6 +55,18 @@
       >
     </div>
     <div class="form-group">
+      <label for="exampleInputPassword1">Hint Image</label>
+      <input
+        type="text"
+        name="hintImg"
+        class="form-control"
+        id="exampleInputPassword1"
+      />
+      <small id="emailHelp" class="form-text text-muted"
+        >image File name with no spaces</small
+      >
+    </div>
+    <div class="form-group">
       <label for="exampleInputPassword1">Game Image Border</label>
       <input
         type="text"
