--- a/templates/games/memory_match.html
+++ b/templates/games/memory_match.html
@@ -55,6 +55,18 @@
         >image File name with extension with no spaces</small
       >
     </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Hint Image</label>
+      <input
+        type="text"
+        name="hintImg"
+        class="form-control"
+        id="exampleInputPassword1"
+      />
+      <small id="emailHelp" class="form-text text-muted"
+        >image File name with extension with no spaces</small
+      >
+    </div>
     <h3>Jodi Pairs</h3>
     <small id="emailHelp" class="form-text text-muted"
         >image File name with extension with no spaces</small
